# coder

./: .bazelrc  .clang-format  .gitignore  MODULE.bazel  README.md  log.txt  main.py
3rd/clangtool/: BUILD.bazel  CMakeLists.txt  test.cpp
coder/: module1.py
coder/ast_parser/libtooling/: BUILD.bazel  CppParser.cpp  CppParser.h  basic.cpp
coder/ast_parser/pycparser/: parser.py
doc/: arch.drawio
tests/: conftest.py
tests/common/: __init__.py  util.py
tests/example/c/: func.c
tests/llt/ast_parser/cppparser/: BUILD
tests/llt/ast_parser/pycparser/: pycparser_test.py
